style: Ícone adicionado na tela e espaçamentos definidos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
 </head>
 
 <body>
-  <main></main>
+  <main>
+    <div class="container">
+      <div class="timer">
+        <h1>25:00</h1>
+      </div>
+      <div class="controller">
+        <span>
+          <img src="/assets/img/play-circle.svg" alt="Ícone de play">
+        </span>
+        <span>
+          <img src="/assets/img/stopwatch.svg" alt="Ícone de relógio">
+        </span>
+      </div>
+    </div>
+    <span id="sound">
+      <img src="/assets/img/volume-medium.svg" alt="Ícone de volume">
+    </span>
+  </main>
   <script src="/assets/js/main.js"></script>
 </body>
 
