--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <main>
     <div class="timer">
-      <span class="minutes">25</span>
+      <span class="minutes">02</span>
       <span>:</span>
       <span class="seconds">00</span>
     </div>
@@ -67,7 +67,7 @@
       </svg>
     </button>
   </footer>
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/index.js" type="module"></script>
 </body>
 
 </html>
